syntax = "proto3";

option csharp_namespace = "DurableLoans.LoanOfficerNotificationService";

package LoanOffice;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service LoanApplicationReceivedNotifier {
  rpc GetLoanApplicationStream (google.protobuf.Empty) returns (stream LoanApplicationReceived);
}

message LoanApplicationReceived {
  string CustomerName = 1;
  int32 LoanAmount = 2;
	google.protobuf.Timestamp TimeReceived = 3;
  repeated AgencyResultReceived AgencyResults = 4;
}

message AgencyResultReceived {
  string AgencyId = 1;
  bool IsApproved = 2;
}